# quicktype_dart

./: .gitattributes  .gitignore  .metadata  .pubignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  build.yaml  dart_test.yaml  ffigen.yaml  pubspec.yaml  quicktype.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/workflows/: build.yml  ci.yml  release.yml
android/: build.gradle  local.properties  settings.gradle
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/src/main/kotlin/com/example/myapp/models/: test.kt
android/src/main/kotlin/com/example/myapp/models/ffi/: testBridge.kt
assets/: quicktype_bundle.js
coverage/: coverage.json  lcov.info
example/: README.md  build.yaml  example.dart  pubspec.yaml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/lib/: main.dart
example/lib/models/: user.dart  user.qt.json
example/lib/src/: dart_model.mustache  quicktype.yaml
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Base.lproj/: MainMenu.xib
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: example_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
ios/: quicktype_dart.podspec  quicktype_runner.podspec
ios/Classes/: dtoa.c  libregexp.c  libunicode.c
ios/Classes/Models/: test.swift
ios/Classes/Models/FFI/: testBridge.swift
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: GeneratedPluginRegistrant.m
lib/: entrypoint_cli.dart  entrypoint_runner.dart  quicktype_dart.dart
lib/src/: backend_io.dart  backend_web.dart  bundle_source.dart  config.dart  facade.dart  file_resolver.dart  interop.dart  logging.dart  quicktype.dart  quicktype_dart.dart  version.dart
lib/src/ffi/: ffi_runtime.dart  native_bundle_cache.dart  qt_shim_bindings.dart
lib/src/g/: bindings.g.dart
lib/src/internal/: argv.dart  package_layout.dart  quicktype_process.dart  temp_dir_sweeper.dart
lib/src/models/: args.dart  command.dart  enums.dart  renderer_options.dart  result.dart  type.dart  type_infer.dart
lib/src/models/args/: enums.dart  lang_c.dart  lang_cpp.dart  lang_csharp.dart  lang_dart.dart  lang_elixir.dart  lang_elm.dart  lang_flow.dart  lang_go.dart  lang_haskell.dart  lang_java.dart  lang_javascript.dart  lang_kotlin.dart  lang_objc.dart  lang_php.dart  lang_proptypes.dart  lang_python.dart  lang_ruby.dart  lang_rust.dart  lang_scala.dart  lang_smithy.dart  lang_swift.dart  lang_typescript.dart  main_args.dart
lib/src/models/options/: lang_c.dart  lang_cpp.dart  lang_csharp.dart  lang_dart.dart  lang_elixir.dart  lang_elm.dart  lang_flow.dart  lang_go.dart  lang_haskell.dart  lang_java.dart  lang_javascript.dart  lang_kotlin.dart  lang_objc.dart  lang_php.dart  lang_proptypes.dart  lang_python.dart  lang_ruby.dart  lang_rust.dart  lang_scala.dart  lang_smithy.dart  lang_swift.dart  lang_typescript.dart  options.dart
lib/src/utils/: file_resolver.dart  logging.dart  shell.dart  type_infer.dart  validator.dart
linux/: CMakeLists.txt
macos/: quicktype_dart.podspec  quicktype_runner.podspec
macos/Classes/: bundle_data.c  qt_shim.c  quickjs.c  quicktype_runner.c
macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
models/: Convert.java  Converter.java  Test.java  test.c  test.cpp  test.cs  test.dart  test.elm  test.ex  test.go  test.h  test.hs  test.js  test.json  test.kt  test.m  test.php  test.py  test.rb  test.rs  test.scala  test.smithy  test.swift  test.ts
native/: CMakeLists.txt  README.md
native/bundle/: build_bundle.sh  empty.cjs  package-lock.json  package.json  prelude.js  quicktype_bundle.js  shim.mjs
native/shim/: bundle_data.c  embed_bundle.py  qt_shim.c  qt_shim.exports  qt_shim.h
test/: args_renderer_options_test.dart  args_test.dart  bundle_source_test.dart  command_test.dart  config_test.dart  generate_integration_test.dart  native_bundle_cache_test.dart  renderer_options_test.dart  type_config_test.dart
test/integration/: generate_integration_test.dart  golden_test.dart
test/integration/goldens/: user_c.c.txt  user_cpp_just_types.cpp.txt  user_csharp.cs.txt  user_dart_just_types.dart.txt  user_elixir.ex.txt  user_elm.elm.txt  user_flow_just_types.js.txt  user_go_just_types.go.txt  user_haskell.hs.txt  user_java_just_types.java.txt  user_javascript.js.txt  user_kotlin.kt.txt  user_objc.m.txt  user_php.php.txt  user_proptypes.js.txt  user_python_just_types.py.txt  user_ruby.rb.txt  user_rust.rs.txt  user_sample.input.json  user_scala.scala.txt  user_smithy.smithy.txt  user_swift_just_types.swift.txt  user_typescript_just_types.ts.txt
test/unit/: argv_test.dart  backend_web_test.dart  bundle_source_test.dart  concurrency_test.dart  config_fuzz_test.dart  config_test.dart  file_resolver_test.dart  native_bundle_cache_test.dart  package_layout_test.dart  quicktype_exception_test.dart  renderer_options_raw_test.dart  renderer_options_test.dart  shell_test.dart  temp_dir_sweeper_test.dart  type_infer_test.dart  version_test.dart
tool/: README.md  api_snapshot.dart  api_snapshot.txt  check_coverage.dart  gen_options.py  install_hooks.dart  package.json  refresh_bundle.dart  sync_version.dart
tool/smoke/: README.md  ffi_isolate_smoke.dart  ffi_noembed_smoke.dart  ffi_smoke.dart  smoke.dart
web/src/models/: test.js  test.schema.js  test.schema.ts
windows/: CMakeLists.txt
